fix: improve modal rendering on iOS

--- a/components/Modal/Modal.module.css
+++ b/components/Modal/Modal.module.css
@@ -4,11 +4,13 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  height: -webkit-fill-available;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow-y: scroll;
+  padding: 1em;
   background-color: rgba(0, 0, 0, 0.33);
   opacity: 1;
   transition: background-color 125ms, opacity 125ms;
@@ -22,8 +24,9 @@
 
 .modal {
   composes: wrapper from '../atoms.module.css';
-  margin: var(--space-l) auto;
+  margin: auto;
   overflow: scroll;
+  max-width: 90%;
   background-color: var(--white);
   border-radius: var(--border-radius-medium);
   box-shadow: var(--box-shadow-heavy);
@@ -31,6 +34,6 @@
 
 @media (min-width: 480px) {
   .modal {
-    max-width: 60%;
+    max-width: calc(900px * 0.75);
   }
 }
